--- a/src/taskboard.yml
+++ b/src/taskboard.yml
@@ -38,5 +38,5 @@ sections:
     type: pubs
     text: |
       Peu de travaux de recherche concernent directement cette pratique.
-      Des investissements considérables sont consacrés par de nombreux éditeurs ou équipes Open Source à la réalisation d'équivalents virtuels du tableau de tâches, alors même que la communauté des praticiens aguerris reste majoritairement persuadée de l'intérêt, voire de la nécessité, du tableau de tâche physique; mettre en évidence le bénéfice réel de cette deuxième solution serait donc une piste de recherche prioritaire.
+      Des investissements considérables sont consacrés par de nombreux éditeurs ou équipes Open Source à la réalisation d'équivalents virtuels du tableau de tâches, alors même que la communauté des praticiens aguerris reste majoritairement persuadée de l'intérêt, voire de la nécessité, du tableau de tâches physique; mettre en évidence le bénéfice réel de cette deuxième solution serait donc une piste de recherche prioritaire.
 ---
