--- a/rakefile
+++ b/rakefile
@@ -5,14 +5,14 @@ task :default => [:generate, :expand,  :webize, :clean]
 YML_SRC = FileList['src/*.yml']
 YML_OUT = YML_SRC.ext('.ham')
 
-HAM_SRC = FileList['src/*.yml', 'src/*.ham', 'src/index.ham']
+HAM_SRC = FileList['src/*.yml', 'src/*.ham', 'src/index*.ham']
 HAM_OUT = HAM_SRC.ext('.html')
 CLEAN.include('src/*.html')
 CLEAN.include('src/*.ham')
 
 desc "Generate indices"
 task :generate => [] do |t|
-  sh "ruby lib/index.rb > src/index.ham"
+  sh "ruby lib/index.rb"
 end
 
 desc "Expand YML descriptors into Haml markup"
