--- a/src/smallrelease.yml
+++ b/src/smallrelease.yml
@@ -1,4 +1,27 @@
 ---
 title: Livraisons fréquentes
 type: Pratique
+full: yes
+  -
+    type: desc
+    text: |
+      Une équipe Agile met fréquemment son produit entre les mains d'utilisateurs finaux, aptes à l'évaluer et à formuler des critiques ou des appréciations.
+      Ce qu'on entend par "fréquemment" varie selon le contexte technique, mais on estime en général qu'une telle livraison doit avoir lieu toutes les quatre à six itérations au grand maximum.
+      (Dans certains contextes, tels que le développement Web, on peut souvent envisager des fréquences plus élevées, par exemple une livraison par itération; la limite étant le [déploiement continu](cd.html).)
+  -
+    type: syno
+    text: |
+      Le terme anglais est "small release" ou "frequent releases", on entend parfois le proverbe "release early, release often".
+  -
+    type: abus
+    text: |
+      * livrer le produit à un responsable marketing ou un chef de projet pour qu'il "teste" la dernière version n'est pas suffisant, pas plus qu'à une équipe d'assurance qualité; au minimum une livraison doit être une "version beta" évaluée par des utilisateurs représentatifs
+      * dans certains contextes (logiciels embarqués, par exemple) il n'est pas possible de prévoir une livraison fréquente à *tous* les utilisateurs; cela ne doit pas servir de prétexte à ne pas organiser une livraison fréquente à *des* utilisateurs (sites pilotes, clients volontaires, etc.)
+  -
+    type: benefices
+    text: |
+      Savoir organiser une mise en production fréquente *dès les débuts du projet* est l'une des pierres angulaires de la réduction du risque par l'approche Agile:
+        * on diminue l'effet tunnel pour la planification du projet
+        * on s'assure plus rapidement de l'adéquation du produit aux besoins réels
+        * on obtient un retour plus rapide sur la qualité et la stabilité du produit
 ---
