--- a/src/teamroom.yml
+++ b/src/teamroom.yml
@@ -1,4 +1,24 @@
 ---
 title: Salle dédiée
 type: Pratique
+full: yes
+sections:
+  -
+    type: desc
+    text: |
+      L'équipe (idéalement au complet, c'est à dire incluant le "client" ou Product Owner) dispose d'un local dédié à plein temps pour le projet, cloisonné des autres activités de l'entreprise.
+      Ce local est équipé de façon à répondre aux besoins logistiques du projet: stations de travail (si nécessaires adaptées au [binômage](binomage.html)), tableaux effaçables et chevalets, espaces aux murs pour l'affichage de Post-Its, etc.
+  -
+    type: abus
+    text: |
+      * le critère de cloisonnement est important: un "open space" ou bureau paysager **n'est pas** une mise en oeuvre adéquate de cette pratique; le bruit occasioné par des personnes étrangères au projet constitue une distraction néfaste à la concentration requise pour un projet de développement
+  -
+  -
+    type: pubs
+    text: |
+      Les conditions "environnementales" favorisant la performance des développeurs ont fait l'objet d'un certain nombre d'études. Bien qu'il soit généralement difficile d'établir de façon fiable quoi que ce soit qui ait trait à la productivité, en raison du caractère flou et ambigu de la notion même de "productivité" pour un programmeur, il semble en ressortir que les deux "extrêmes" que sont le bureau individuel **ou** le local dédié soient les plus favorables.
+      Le bureau paysager, malgré son intérêt économique évident, et l'attrait (plus subtil) qu'il peut exercer sur des managers soucieux de "surveiller" leurs troupes, s'avère être la pire des solutions, retenant le plus mauvais des deux mondes.
+
+        * [How office space affects programming productivity](http://ieeexplore.ieee.org//xpls/abs_all.jsp?arnumber=362626) examine quelques études empiriques assez anciennes et évoque l'intérêt de bureaux privatifs (1995)
+        * [Rapid software development through team collocation](http://ieeexplore.ieee.org//xpls/abs_all.jsp?arnumber=1019481), une étude plus récente,  semble confirmer qu'un local dédié favorise de meilleures performances (du moins mesurées par des indices subjectifs de satisfaction, du client comme des développeurs) (2002)
 ---
