--- a/src/charter.yml
+++ b/src/charter.yml
@@ -1,4 +1,30 @@
 ---
 title: Charte projet
 type: Pratique
+full: yes
+sections:
+  -
+    type: desc
+    text: |
+      L'équipe résume, dans un document très court, idéalement susceptible d'être affiché aux murs de [l'espace de travail](teamroom.html) au format d'une feuille de "paperboard", les enjeux principaux du projet, son périmètre et les accords réciproques passés avec les commanditaires du projet.
+      La communauté Agile s'est appropriée divers techniques ou formalismes intéressants pour leur capacité à condenser ces informations: par exemple le ["dessin riche"](http://portablelearner.com/half-notes/rich-pictures/) issu de l'approche SSM, le ["diagramme de contexte"](http://yourdon.com/strucanalysis/wiki/index.php?title=Chapter_18#The_Context_Diagram) hérité de l'approche Yourdon pour l'analyse structurée, ou le [A3](http://www.crisp.se/lean/a3-template) du Lean (qui tire précisément son nom du format de papier).
+  -
+    type: syno
+    text: |
+      Le terme anglais est "project charter".
+  -
+    type: abus
+    text: |
+      * évitez d'utiliser un "modèle de document" pour une charte de projet; l'intérêt de l'exercice consiste à cerner l'information qui, dans le contexte unique de votre projet, permettra à l'équipe de prendre des décisions avisées
+      * une charte de projet ne doit pas dépasser une page en longueur, faute de quoi elle deviendra un nouveau document rébarbatif et rarement lu
+  -
+    type: benefices
+    text: |
+      On constate souvent, quand on interroge les membres d'une même équipe, des divergences surprenantes entre leurs réponses à des questions du type: "Quel est l'objectif de ce projet? Quels en sont les aspects les plus importants? Qui cherchez-vous à satisfaire? De quels moyens disposez-vous?"
+      L'établissement d'une charte mais surtout le fait de s'assurer que son contenu soit *connu et approuvé par l'ensemble de l'équipe* donne au projet une unité d'intention qui est un facteur de succès souvent critique.
+  -
+    type: histo
+    text: |
+      * le contenu idéal d'une charte projet est défini dans un article longtemps resté confidentiel, voire obscur: ["Charters and Charterings, Immunizing your Project Against Foreseeable Failure"](http://www.industriallogic.com/papers/Chartering.pdf) (2001)
+      * l'adoption de cette pratique par la communauté Agile a été lente et graduelle, et sa popularité plus récente s'explique probablement par la volonté de répondre à la critique souvent formulée qu'une approche Agile porte trop peu d'intérêt à la "vue d'ensemble" du projet
 ---
